Adopt JDK 15 with preview features.